crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3_clickbench_arrow_clickbench_q38_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q38"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: PageViews DESC NULLS FIRST, fetch=10                                                                                                                                                                                                                                                                                                                                     |
|               |   Projection: hits.Title, count(*) AS PageViews                                                                                                                                                                                                                                                                                                                                |
|               |     Aggregate: groupBy=[[hits.Title]], aggr=[[count(Int64(1)) AS count(*)]]                                                                                                                                                                                                                                                                                                    |
|               |       Projection: hits.Title                                                                                                                                                                                                                                                                                                                                                   |
|               |         BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                     |
|               |           Filter: hits.CounterID = Int32(62) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None) AND hits.DontCountHits = Int16(0) AND hits.IsRefresh = Int16(0) AND hits.Title != LargeUtf8("") |
|               |             TableScan: hits projection=[Title, EventDate, CounterID, IsRefresh, DontCountHits]                                                                                                                                                                                                                                                                                 |
| physical_plan | SortPreservingMergeExec: [PageViews@1 DESC], fetch=10                                                                                                                                                                                                                                                                                                                          |
|               |   SortExec: TopK(fetch=10), expr=[PageViews@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                              |
|               |     ProjectionExec: expr=[Title@0 as Title, count(*)@1 as PageViews]                                                                                                                                                                                                                                                                                                           |
|               |       AggregateExec: mode=FinalPartitioned, gby=[Title@0 as Title], aggr=[count(*)]                                                                                                                                                                                                                                                                                            |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                            |
|               |           RepartitionExec: partitioning=Hash([Title@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                               |
|               |             AggregateExec: mode=Partial, gby=[Title@0 as Title], aggr=[count(*)]                                                                                                                                                                                                                                                                                               |
|               |               ProjectionExec: expr=[Title@0 as Title]                                                                                                                                                                                                                                                                                                                          |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                             |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                  |
|               |                     FilterExec: CounterID@2 = 62 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) <= 1375228800000000000 AND DontCountHits@4 = 0 AND IsRefresh@3 = 0 AND Title@0 !=                                                                                                            |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                       |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                  |
|               |                           MemoryExec: partitions=1, partition_sizes=[12218]                                                                                                                                                                                                                                                                                                    |
|               |                                                                                                                                                                                                                                                                                                                                                                                |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
